--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dogeify",
-  "version": "0.0.1",
+  "version": "2.4.0",
   "description": "Dogescript transform for Browserify",
   "main": "index.js",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "git://github.com/remixz/dogeify.git"
   },
   "scripts": {
-    "test": "./node_modules/.bin/tape test/*.js"
+    "test": "./node_modules/.bin/tape test/test.js"
   },
   "keywords": [
     "dogescript",
@@ -21,7 +21,7 @@
     "url": "https://github.com/remixz/dogeify/issues"
   },
   "dependencies": {
-    "dogescript": "2.x",
+    "dogescript": "2.4.0",
     "through": "~2.3.4"
   },
   "devDependencies": {
